syntax = "proto3";
option java_package = "com.anr.protobuff.dto";
option java_outer_classname = "StudentListProto";

message StudentList {


  message Student {
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;


  }

  repeated Student students = 4;


}